--- a/cliente_otro_dominio/index.html
+++ b/cliente_otro_dominio/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -9,27 +8,52 @@
 </head>
 <body>
     <h1>Biblioteca de Clásicos</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Título</th>
-                <th>Autor</th>
-                <th>Año</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody id="book-table"></tbody>
-    </table>
 
-    <form id="book-form">
-        <input type="hidden" id="book-id">
-        <input type="text" id="book-title" placeholder="Título" required>
-        <input type="text" id="book-author" placeholder="Autor" required>
-        <input type="number" id="book-year" placeholder="Año" required>
-        <button type="button" id="createButton">AÑADIR LIBRO</button>
-    </form>
-    <button type="button" id="downloadButton">DOWNLOAD</button>
+    <!-- Login Form -->
+    <div id="login-section">
+        <h2>Iniciar Sesión</h2>
+        <form id="login-form">
+            <input type="text" id="username" placeholder="Usuario" required>
+            <input type="password" id="password" placeholder="Contraseña" required>
+            <button type="button" id="loginButton">Iniciar Sesión</button>
+        </form>
+    </div>
+
+    <!-- Registration Form -->
+    <div id="register-section">
+        <h2>Registro de Usuario</h2>
+        <form id="register-form">
+            <input type="text" id="register-username" placeholder="Usuario" required>
+            <input type="password" id="register-password" placeholder="Contraseña" required>
+            <button type="button" id="registerButton">Registrar</button>
+        </form>
+    </div>
+
+    <!-- Main Content (Hidden by Default) -->
+    <div id="main-content">
+        <table>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Título</th>
+                    <th>Autor</th>
+                    <th>Año</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody id="book-table"></tbody>
+        </table>
+
+        <form id="book-form">
+            <input type="hidden" id="book-id">
+            <input type="text" id="book-title" placeholder="Título" required>
+            <input type="text" id="book-author" placeholder="Autor" required>
+            <input type="number" id="book-year" placeholder="Año" required>
+            <button type="button" id="createButton">AÑADIR LIBRO</button>
+        </form>
+        <button type="button" id="downloadButton">DOWNLOAD</button>
+        <button type="button" id="logoutButton">Cerrar Sesión</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
